# src/main.rs
@@ -30,6 +30,7 @@ async fn main() -> Result<()> {
                     .route("/email", web::post().to(email::send_email_handler))
                     .route("/wechat/apps", web::get().to(app::get_apps))
                     .route("/comment", web::get().to(comment::get_comments))
+                    .route("/comment", web::post().to(comment::post_comment))
                     .service(actix_files::Files::new("/doc", "swagger").index_file("index.html")),
             )
     })
